- fixed memory leaks in reader of TSP example 
- fixed bug while after restarting possible the aggregated variables were not removed in setppc constraints
- fixed various small bugs in nonlinear expressions code
- fixed bug in DINS heuristic that occured when the incumbent solution value is outside the variable's current domain 
- fixed bug in DINS w.r.t. columns generation
- fixed bug in heur_subnlp.c where wrong constraints forbidding variable fixations where added in case of general integers
- fixed bug in var.c where a possible multiaggregation was resolved to an aggregation but the variables types were not checked to prefer more general types for aggregating; possible memory loss removed

performance improvements:
- shiftandpropagate-heuristic uses optimized data structures and produces no memory overhead anymore
- larger search domain for twoopt-heuristic
- fasten propagation in cons_knapsack.c due to negated clique partitions
- recalculating only needed partitions in cons_knapsack.c, not always both
- calculation of node priority now also works when variable's relaxation value is equal to a bound
- fasten knapsack separation by replacing SCIPallocBufer(Array) through SCIPallocBlockMemory(Array)

SCIP version 2.0.1
===============

interface:
- allow access of transformed constraints in SCIP_STAGE_TRANSFORMED

performance improvements:
- SCIP with SoPlex as LP solver now uses auto pricing by default (start with devex, switch to steepest edge after some iterations);
  this fixes timeouts on instances where devex converges very slowly
- fixing lifting of new knapsack items which are negated items of already included items, this could lead to very long presolving
- fixed performance issue in presolving w.r.t. to computing the number of new fixings, aggregated, and so on before a 
  constraint handler presolver is called
- in case of adding constraints during pricing with initial flag set to TRUE, we add now these constraints 
  after the pricing round to the LP