@@ -12,7 +12,7 @@
 /*  along with SCIP; see the file COPYING. If not email to scip@zib.de.      */
 /*                                                                           */
 /* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
-#pragma ident "@(#) $Id: heur_localbranching.c,v 1.60.2.1 2011/01/02 11:19:43 bzfheinz Exp $"
+#pragma ident "@(#) $Id: heur_localbranching.c,v 1.60.2.2 2011/02/18 13:45:48 bzfberth Exp $"
 
 /**@file   heur_localbranching.c
  * @ingroup PRIMALHEURISTICS
@@ -361,9 +361,7 @@ SCIP_DECL_HEUREXEC(heurExecLocalbranching)
  
    SCIP_Bool success;
 
-#ifdef NDEBUG
-   SCIP_RETCODE retstat;
-#endif
+   SCIP_RETCODE retcode;
   
    assert(heur != NULL);
    assert(scip != NULL);
@@ -561,22 +559,20 @@ SCIP_DECL_HEUREXEC(heurExecLocalbranching)
    SCIP_CALL( SCIPsetObjlimit(subscip, cutoff) );
 
    /* solve the subproblem */  
-   SCIPdebugMessage("solving local branching sub-MIP with neighborhoodsize %d and maxnodes %"SCIP_LONGINT_FORMAT"\n",
+   SCIPdebugMessage("solving local branching subproblem with neighborhoodsize %d and maxnodes %"SCIP_LONGINT_FORMAT"\n",
       heurdata->curneighborhoodsize, nsubnodes);
-
-   /* Errors in the LP solver should not kill the overall solving process, if the LP is just needed for a heuristic.
-    * Hence in optimized mode, the return code is catched and a warning is printed, only in debug mode, SCIP will stop.
+   retcode = SCIPsolve(subscip);
+   
+   /* Errors in solving the subproblem should not kill the overall solving process 
+    * Hence, the return code is catched and a warning is printed, only in debug mode, SCIP will stop.
     */
-#ifdef NDEBUG
-      retstat = SCIPsolve(subscip);
-      if( retstat != SCIP_OKAY )
-      { 
-         SCIPwarningMessage("Error while solving subMIP in localbranching heuristic; subSCIP terminated with code <%d>\n",
-            retstat);
-      }
-#else
-      SCIP_CALL( SCIPsolve(subscip) );
+   if( retcode != SCIP_OKAY )
+   { 
+#ifndef NDEBUG
+      SCIP_CALL( retcode );     
 #endif
+      SCIPwarningMessage("Error while solving subproblem in local branching heuristic; subSCIP terminated with code <%d>\n",retcode);
+   }
 
    heurdata->usednodes += SCIPgetNNodes(subscip);
    SCIPdebugMessage("local branching used %"SCIP_LONGINT_FORMAT"/%"SCIP_LONGINT_FORMAT" nodes\n", 
