@@ -16,9 +16,10 @@ fixed bugs:
 - fixed bug while after restarting possible the aggregated variables were not removed in setppc constraints
 - fixed various small bugs in nonlinear expressions code
 - fixed bug in DINS heuristic that occured when the incumbent solution value is outside the variable's current domain 
-- fixed bug in DINS w.r.t. columns generation
+- fixed bug in DINS w.r.t. column generation
 - fixed bug in heur_subnlp.c where wrong constraints forbidding variable fixations where added in case of general integers
 - fixed bug in var.c where a possible multiaggregation was resolved to an aggregation but the variables types were not checked to prefer more general types for aggregating; possible memory loss removed
+- fixed behavior of LNS heuristics when the subproblem aborts: continue in optimized mode, stop in debug mode
 
 performance improvements:
 - shiftandpropagate-heuristic uses optimized data structures and produces no memory overhead anymore
